<resources>
    <string name="app_name">LearnXML</string>
    <string name="feat_login_window">Welcome to my App</string>
    <string name="feat_login_subtitles">Please Sing-in to continue</string>
    <string name="new_to_social_network">New to social network?</string>
    <string name="register">Register</string>
    <string name="feat_login_google">Login with Google</string>
    <string name="feat_login_or">OR</string>
    <string name="feat_login_login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="email_id">Email</string>
    <string name="login">Login</string>
    <string name="joined_us_before">Joined us before?</string>
    <string name="continuation">Continue</string>
    <string name="terms">By signing up, you´re agree to our terms and conditions and Privacy Policy</string>
    <string name="number">Number</string>
    <string name="full_name">Full Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="submit">Submit</string>
    <string name="email_id_mobile_number">Email ID/Mobile Number</string>
    <string name="forgot_password_message">Don\'t worry it happens. Please enter the address associated with your
        account
    </string>
    <string name="forgot_password_text">Forgot\nPassword?</string>
    <string name="submiting">Submiting</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="new_password">New Password</string>
    <string name="reset_password">Reset\nPassword</string>
    <string name="post_image">post_image</string>
    <string name="reciclyer_view">Reciclyer View</string>
</resources>