<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        style="@style/LearnXML.ConstraintStyle"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_margin="@dimen/space_small"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_loginv2"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="@dimen/space_large"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toTopOf="@id/constraintLayout">
    </ImageView>

    <androidx.constraintlayout.widget.ConstraintLayout
            style="@style/LearnXML.ConstraintStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/constraintLayout"
            android:layout_margin="@dimen/space_large">

        <TextView
                android:id="@+id/newTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/LearnXML.TextStyle"
                app:layout_constraintEnd_toStartOf="@id/register"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/new_to_social_network">

        </TextView>

        <TextView
                android:id="@+id/register"
                style="@style/LearnXML.TextStyle.Link"
                app:layout_constraintStart_toEndOf="@id/newTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="@dimen/space_small"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/register">
        </TextView>

        <TextView
                style="@style/LearnXML.Widget.Button"
                android:id="@+id/button_google"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="@dimen/space_large"
                android:background="@drawable/background_login_google"
                android:gravity="center"
                android:paddingHorizontal="36dp"
                android:text="@string/feat_login_google"
                app:layout_constraintBottom_toTopOf="@id/register"
                app:drawableStartCompat="@drawable/ic_google">

        </TextView>




        <TextView
                android:id="@+id/or"
                style="@style/LearnXML.TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feat_login_or"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="@dimen/space_small"
                app:layout_constraintBottom_toTopOf="@id/button_google">

        </TextView>

        <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginEnd="@dimen/space_small"
                app:layout_constraintTop_toTopOf="@id/or"
                app:layout_constraintBottom_toBottomOf="@id/or"
                app:layout_constraintEnd_toStartOf="@id/or"
                android:background="@color/separator"
                app:layout_constraintStart_toStartOf="parent">

        </View>

        <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/space_small"
                app:layout_constraintTop_toTopOf="@id/or"
                app:layout_constraintBottom_toBottomOf="@id/or"
                app:layout_constraintStart_toEndOf="@id/or"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@color/separator">
        </View>

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_login"
                style="@style/LearnXML.Widget.Button"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginBottom="@dimen/space_small"
                android:background="@drawable/background_login"
                android:text="@string/feat_login_login"
                android:elevation="0dp"
                app:layout_constraintBottom_toTopOf="@id/or">
        </androidx.appcompat.widget.AppCompatButton>

        <TextView
                android:id="@+id/forgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/button_login"
                android:layout_margin="@dimen/space_small"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/LearnXML.TextStyle.Link"
                android:textSize="15sp"
                android:text="@string/forgot_password">

        </TextView>

        <com.google.android.material.textfield.TextInputLayout
                style="@style/LearnXML.Widget.TextInputLayout"
                android:id="@+id/passsword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:layout_marginBottom="@dimen/space_large"
                app:passwordToggleEnabled="true"
                app:layout_constraintBottom_toTopOf="@id/forgot">
            <com.google.android.material.textfield.TextInputEditText
                    style="@style/LearnXML.Widget.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_password"
                    android:drawablePadding="@dimen/space_small"
                    android:inputType="textPassword">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
                style="@style/LearnXML.Widget.TextInputLayout"
                android:id="@+id/emailID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_id"
                android:layout_marginBottom="@dimen/space_large"
                app:endIconMode="clear_text"
                app:layout_constraintBottom_toTopOf="@id/passsword">
            <com.google.android.material.textfield.TextInputEditText
                    style="@style/LearnXML.Widget.TextInputLayout"
                    android:layout_width="match_parent"
                    android:drawableStart="@drawable/ic_email_log"
                    android:drawablePadding="@dimen/space_small"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/emailID"
                android:text="@string/login"
                android:layout_marginBottom="20dp"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/LearnXML.TextStyle.Title">
        </TextView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>