<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        style="@style/LearnXML.ConstraintStyle"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_margin="@dimen/space_small"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_forgot_password"
            android:layout_margin="@dimen/space_large"
            app:layout_constraintBottom_toTopOf="@id/forgot_password_constraint"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@id/forgot_password_constraint"
            app:layout_constraintEnd_toEndOf="@id/forgot_password_constraint"
            android:scaleType="fitCenter">
    </ImageView>


        <androidx.constraintlayout.widget.ConstraintLayout
                style="@style/LearnXML.ConstraintStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_large"
                android:paddingBottom="@dimen/space_superlarge"
                app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/forgot_password_constraint">


           <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/submit_button"
                   style="@style/LearnXML.Widget.Button"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   app:layout_constraintBottom_toBottomOf="@id/forgot_password_constraint"
                   android:layout_marginBottom="@dimen/space_superlarge"
                   android:text="@string/submit"
                   android:textColor="@color/white">
           </androidx.appcompat.widget.AppCompatButton>

            <com.google.android.material.textfield.TextInputLayout
                    style="@style/LearnXML.Widget.TextInputLayout"
                    android:id="@+id/email_number_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toTopOf="@id/submit_button"
                    android:hint="@string/email_id_mobile_number"
                    app:endIconMode="clear_text"
                    android:layout_marginBottom="@dimen/space_large">
                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:inputType="textEmailAddress"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_arroba"
                        android:drawablePadding="@dimen/space_small">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                    android:id="@+id/message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toTopOf="@id/email_number_input"
                    android:layout_marginBottom="@dimen/space_large"
                    android:text="@string/forgot_password_message">
            </TextView>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toTopOf="@id/message"
                    android:layout_marginBottom="@dimen/space_large"
                    android:text="@string/forgot_password_text"
                    style="@style/LearnXML.TextStyle.Title">
            </TextView>

        </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>