<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        style="@style/LearnXML.ConstraintStyle"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/space_small"
        android:layout_height="match_parent">


    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:src="@drawable/ic_reset_password_image"
            android:scaleType="fitCenter"
            android:layout_margin="@dimen/space_small"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/resset_password_constraint">

    </ImageView>

    <androidx.constraintlayout.widget.ConstraintLayout
            style="@style/LearnXML.ConstraintStyle"
            android:id="@+id/resset_password_constraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="@dimen/space_large"
            android:paddingBottom="@dimen/space_megalarge">


        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/submit_button_reset"
                style="@style/LearnXML.Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginBottom="@dimen/space_superlarge"
                app:layout_constraintBottom_toBottomOf="@id/resset_password_constraint"
                android:text="@string/submit">
        </androidx.appcompat.widget.AppCompatButton>


        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_password_confirm"
                style="@style/LearnXML.Widget.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/submit_button_reset"
                android:hint="@string/confirm_new_password"
                app:endIconMode="clear_text"
                android:layout_marginBottom="@dimen/space_large">
            <com.google.android.material.textfield.TextInputEditText
                    android:drawableStart="@drawable/ic_password"
                    android:drawablePadding="@dimen/space_small"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_password"
                android:layout_marginBottom="@dimen/space_large"
                app:layout_constraintBottom_toTopOf="@id/input_password_confirm"
                app:endIconMode="clear_text"
                style="@style/LearnXML.Widget.TextInputLayout">
            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:drawableStart="@drawable/ic_password"
                    android:drawablePadding="@dimen/space_small">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
                android:id="@+id/reset_password_title"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset_password"
                style="@style/LearnXML.TextStyle.Title"
                app:layout_constraintBottom_toTopOf="@id/input_new_password"
                android:layout_marginBottom="@dimen/space_large">
        </TextView>





    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>